# airplane_data_scheduler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/api/: main.py
