[project]
name = "airplane-data-scheduler"
version = "0.1.0"
description = "중국·일본 항공사 데이터 수집 및 스케줄링 시스템"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airplane_scheduler"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
